<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orb_slam3_rb5_ros2</name>
  <version>0.0.1</version>
  <description>
     ORB_SLAM3_RB5
  </description>
  <author>Carlos Campos, Richard Elvira, Juan J. Gomez, Jose M.M. Montiel, Juan D. Tardos</author>
  <maintainer email="henryzhangzhy@gmail.com">Henry Zhang</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend> rclcpp </depend>
  <depend> tf2 </depend>
  <depend> tf2_ros </depend>
  <depend> sensor_msgs </depend>
  <depend> image_transport </depend>
  <depend> geometry_msgs </depend>
  <depend> cv_bridge </depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



